# mamba2-torch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-fast-path.txt  requirements.txt
code/mamba2/: .gitignore  requirements.txt
code/mamba2/core/modeling/: convert_mamba2_to_hf.py  modeling_mamba2.py
code/mamba2/core/ops/: k_activations.py  ssd_bmm.py  ssd_chunk_state.py  ssd_combined.py
code/mamba2/core/testing/: Test.ipynb  Test.py
code/mamba2/src/: Test.ipynb  configuration_mamba2.py  convert_mamba2_to_hf.py  modeling_mamba2.py
code/mamba2/src/modeling/: convert_mamba2_to_hf.py  modeling_mamba2.py
code/mamba2/src/ops/: layernorm_gated.py  selective_state_update.py  ssd_chunk_scan.py  ssd_combined.py  ssd_state_passing.py
code/mamba2/src/testing/: Test.py
scripts/: convert_mamba2.sh  convert_mamba2_to_hf.py  download_mamba2.sh
src/mamba2_torch/: __init__.py
src/mamba2_torch/modeling/: configuration_mamba2.py  convert_mamba2_to_hf.py  modeling_mamba2.py
src/mamba2_torch/ops/: custom_fwd_bwd.py  k_activations.py  layer_norm.py  layernorm_gated.py  selective_state_update.py  softplus.py  ssd_bmm.py  ssd_chunk_scan.py  ssd_chunk_state.py  ssd_combined.py  ssd_state_passing.py
tests/: Test.ipynb  Test.py  TestSSDMinimal.py  ssd_minimal.py  ssd_minimal_no_einops.py
